# acpc

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/acpc/: __init__.py  __main__.py  _completion.py  agents.py  cli.py  client.py  models_cache.py  output.py  presets.py  runner.py  sessions.py
src/acpc/data/agents/: claude.toml  codex.toml  gemini.toml
tests/: conftest.py  mock_agent.py  test_agents.py  test_cli.py  test_client.py  test_integration.py  test_live.py  test_output.py  test_runner.py  test_sessions.py
