[project]
name = "acpc"
version = "0.1.0"
description = "Thin Python CLI client for the Agent Client Protocol (ACP)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Damian Pala", email = "noreply@damianpala.com" },
]
requires-python = ">=3.12"
keywords = ["acp", "agent-client-protocol", "ai-agents", "claude", "codex", "gemini", "cli", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "agent-client-protocol>=0.8.1",
    "click>=8.1",
    "platformdirs>=4.0",
]

[project.urls]
Repository = "https://github.com/DamianPala/acpc"
Issues = "https://github.com/DamianPala/acpc/issues"

[project.scripts]
acpc = "acpc.cli:cli"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest>=8.0",
    "pytest-cov",
]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--capture=fd",
    "--maxfail=5",
    "-m", "not live",
]

markers = [
    "live: end-to-end tests with real ACP agents (cost API credits)",
]

norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = ""
message = "chore(release): bump version {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'name = "acpc"\nversion = "{current_version}"'
replace = 'name = "acpc"\nversion = "{new_version}"'
